--- a/Formulaire/templates/formulaire.html
+++ b/Formulaire/templates/formulaire.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>formulaire</title>
+         <title>formulaire</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     </head>
     <body>
         <h1>
             <%= title %>
-                  </h1>
-<div> 
-        		
-</div>
+        </h1>
+
+       <ul>
+  <li> <%= ID %></li>
+  <li> <%= MARKET %></li>
+  <li> <%= FRANCHISE %></li>
+  <li> <%= DIRECTEUR %></li>
+  <li> <%= DATE %></li>
+</ul>	
+
     </body>
 </html>
